--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -20,9 +20,7 @@
   </head>
 
   <body>
-  <div class="">
-
-
+  
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -31,38 +29,42 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
           </button>
-          <a class="navbar-brand" href="#">Portfolio</a>
+          <a class="navbar-brand" href="/">Global Fashion</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li class="active"><a href="/products/male">Male</a></li>
+            <li><a href="/products">Products</a></li>
+            <li><a href="/products/female">Female</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <form class="navbar-form navbar-left" action="/action_page.php">
+          <ul class="nav navbar-nav navbar-form navbar-right">
+
+            <div class="navbar-form navbar-left">
               <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search">
-                <div class="input-group-btn">
-                  <button class="btn btn-default" type="submit">
-                    <i class="glyphicon glyphicon-search"></i>
-                  </button>
-                </div>
+                <%= form_tag(products_path, :method => "get", id: "search-form") do %>
+                  <%= text_field_tag :search, params[:search], placeholder: "Search Products", class: "form-control" %>
+                  <div class="input-group-btn">
+                    <%= button_tag(type: "submit", class: "btn btn-default") do %>
+                      <i class="glyphicon glyphicon-search"></i>
+                    <% end %>
+                  </div>
+                <% end %>
               </div>
-            </form> 
+            </div>
             <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
         </div>
       </div>
     </nav>
- </div>
+ 
   
     <%= yield %>
 
     
+    <footer class="container-fluid text-center">
+      <p>Footer Text</p>
+    </footer>
 
-   
-    
   </body>
 </html>
