Fixed the index page, Added kids tab in the nav bar also made the contact page working

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 
-<div id="carousle-background">
+<div id="">
     <div class="container" >
         <div class="jumbotron ">
             <div class="container text-center">
@@ -20,29 +20,29 @@
                                     <img src="<%= produc.image%>" width="475px" height="550px" class="img-rounded " >
                                     </div>
                                     <div class="col-md-6">
-                                    <img src="<%= produc.image%>" width="475px" height="550px" class="img-rounded" >
+                                    <img src="https://imgpic.org/upload/images/8fee6f21-58e4-a75f-e741-583002dde8cd.jpg" width="475px" height="550px" class="img-rounded" >
                                     </div>
                                 </div>
                             </div>
-                    
+                            
                             <div class="item">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <img src="<%= produc.image%>" width="475px" height="550px" class="img-rounded " >
+                                        <img src="https://i.pinimg.com/originals/43/c3/c6/43c3c6108a6afc944ddc682eb83a1418.jpg" width="475px" height="550px" class="img-rounded " >
                                     </div>
                                     <div class="col-md-6">
-                                        <img src="<%= produc.image%>" width="475px" height="550px" class="img-rounded" >
+                                        <img src="https://www.sareespalace.com/image/cache/data/green-crystals-enhanced-embroidered-wedding-wear-lehenga-choli-800x1100.jpg" width="475px" height="550px" class="img-rounded" >
                                     </div>
                                 </div>
                             </div>
-                        
+                          
                             <div class="item">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <img src="<%= produc.image%>" width="475px" height="550px" class="img-rounded " >
+                                        <img src="http://picture-cdn.wheretoget.it/wt7alh-l-610x610-dress-salwar+kameez-clothing-women+clothing-women+dress-bollywood+dress-bollywood+salwar+kameez-anarkali+kameez-designer+salwar+kameez-indian+dress-party+wear+salwar+kameez.jpg" width="475px" height="550px" class="img-rounded " >
                                     </div>
                                     <div class="col-md-6">
-                                        <img src="<%= produc.image%>" width="475px" height="550px" class="img-rounded" >
+                                        <img src="https://sekho.in/wp-content/uploads/2016/09/Top-Bollywood-Actress-In-Salwar-Kameez-20161.jpg" width="475px" height="550px" class="img-rounded" >
                                     </div>
                                 </div>
                             </div>
@@ -67,27 +67,14 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="container">
 
     <div class="container-fluid bg-3 text-center">    
-        <h3>Some of my Work</h3><br>
+        <h3 >Some New Trends For Everyone</h3><br>
         <div class="row">
             <% @products.each do |p| %>
                 <div class="col-sm-3">
-                    <p>Some text..</p>
+                    <br>
                     <img src="<%= p.image %>"  class="img-responsive"  style="width:100%" alt="Image">
                 </div>
             <% end %>
@@ -117,7 +104,7 @@
 
 
 
-<h1> I m home </h1>
+<h1> I am at HOME INDEX page </h1>
 
 
 
