--- a/app/views/products/oneitem.html.erb
+++ b/app/views/products/oneitem.html.erb
@@ -3,13 +3,13 @@
 <h1> I am one item page </h1>
 
 <img src="<%= @product.image %>"  class="img-responsive"  style="width:300px height:350px" alt="Image"></a>
-<h4><%= @product.price %><h4>
+
 <h4><%= @product.description %><h4>
 
 
 
-<%= form_tag charges_path do %>
-    <input id="price" name="price" type="number" value= "<%= @product.price %>" />
+<%= form_tag charges_create_path do %>
+    <input id="price" name="price" type="hidden" value= "<%= @product.price %>" />
     
     <article>
       <% if flash[:error].present? %>
@@ -23,10 +23,10 @@
     </article>
     
     
-    
+    <% @amount = number_to_currency(@product.price * 100) %>
     <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
       data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-      data-amount="<%= @product.price %>"
+      data-amount="<%= @amount %>"
       data-locale="auto">
     </script>
  <% end %>
