--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,12 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
+          <li><%= link_to "Female", products_female_path %></li>
             <li class="active"><%= link_to "Male", products_male_path %></li>
-            <li><a href="/products">Products</a></li>
-            <li><a href="/products/female">Female</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><%= link_to "Kids", products_kids_path %></li>
+            <li><%= link_to "Products", products_path %></li>
+            
+            <li><a href="/contact">Contact</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-form navbar-right">
 
@@ -52,7 +54,7 @@
                 <% end %>
               </div>
             </div>
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+           
           </ul>
         </div>
       </div>
@@ -63,7 +65,7 @@
     </div>
     
     <footer class="container-fluid text-center">
-      <p>Footer Text</p>
+      <p>&copy; Global Fashion 2018</p>
     </footer>
 
   </body>
