--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -44,3 +44,23 @@ footer {
 #carousle-background {
   background-color: whitesmoke;
 }
+
+.trends-font {
+  font-family:  sans-serif;
+  font-style: oblique;
+  font-size: 40px;
+  color: rgb(83, 79, 79);
+}
+
+
+@media only screen and (max-width: 500px) {
+
+  #amazingslider-wrapper-1 {
+
+    display:none;
+
+  }
+
+}
+
+
